Full code of WSCommands

--- a/resources/assets/wscommands/lang/en_us.json
+++ b/resources/assets/wscommands/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "advancements.new_world.title": "New World",
-  "advancements.new_world.descr": "created a new world"
+  "advancements.new_world.descr": "joined the world for the (first?) time"
 }
